[package]
name = "photolabeler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["http2", "macros"] }
serde = "1.0.216"
tera = "1.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sqlx = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }

[workspace.dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "postgres"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "tokio-macros"] }
dotenvy = "0.15.7"

[workspace]
members = ["migrations/"]
resolver = "2"