[package]
name = "sqlite-query"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
query = { path = "../query"}
async-trait = "0.1.83"
futures-core = "0.3.31"
futures = "0.3.31"
